src/it/resources/kubeflow-environment/keycloak/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-vs
  namespace: keycloak
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /auth
    rewrite:
      uri: /auth
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-vs
  namespace: istio-system
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /oauth2/userinfo
    rewrite:
      uri: /oauth2/userinfo
    route:
    - destination:
        host: authservice.istio-system.svc.cluster.local
        port:
          number: 8080
